--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
                     <p class="month61">6 месяцев</p>
                     <p class="year1">год</p>
                 </div>
-                <div class="users1-5-10-25-100">
+                <div class="users1-5-10-25-1001">
+                    <p class="users15">5</p>
+                    <p class="users110">10</p>
+                    <p class="users125">25</p>
+                    <p class="users1100">100</p>
+                </div>
+                <div class="users1-5-10-25-1002">
                     <p class="users15">5</p>
                     <p class="users110">10</p>
                     <p class="users125">25</p>
@@ -94,7 +100,13 @@
                     <p class="month62">6 месяцев</p>
                     <p class="year2">год</p>
                 </div>
-                <div class="users2-5-10-25-100">
+                <div class="users2-5-10-25-1001">
+                    <p class="users25">5</p>
+                    <p class="users210">10</p>
+                    <p class="users225">25</p>
+                    <p class="users2100">100</p>
+                </div>
+                <div class="users2-5-10-25-1002">
                     <p class="users25">5</p>
                     <p class="users210">10</p>
                     <p class="users225">25</p>
@@ -131,7 +143,13 @@
                     <p class="month63">6 месяцев</p>
                     <p class="year3">год</p>
                 </div>
-                <div class="users3-5-10-25-100">
+                <div class="users3-5-10-25-1001">
+                    <p class="users35">5</p>
+                    <p class="users310">10</p>
+                    <p class="users325">25</p>
+                    <p class="users3100">100</p>
+                </div>
+                <div class="users3-5-10-25-1002">
                     <p class="users35">5</p>
                     <p class="users310">10</p>
                     <p class="users325">25</p>
@@ -171,7 +189,13 @@
                     <p class="month64">6 месяцев</p>
                     <p class="year4">год</p>
                 </div>
-                <div class="users4-5-10-25-100">
+                <div class="users4-5-10-25-1001">
+                    <p class="users45">5</p>
+                    <p class="users410">10</p>
+                    <p class="users425">25</p>
+                    <p class="users4100">100</p>
+                </div>
+                <div class="users4-5-10-25-1002">
                     <p class="users45">5</p>
                     <p class="users410">10</p>
                     <p class="users425">25</p>
