--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         </div> 
     </div>   
     <div class="conteiner-a">
-        <a class="a" href="qwerty">Полное описание тарифных планов</a>
+        <a class="a" href="https://rbs-crm.ru/products/sravnenie-tarifnyh-planov/">Полное описание тарифных планов</a>
     </div>
     <p class="terms-of-purchase">У С Л О В И Я ⠀П Р И О Б Р Е Т Е Н И Я</p>
     <div class="conteiner-terms-of-purchase">
